[package]
name = "webassembly-test"
version = "0.1.0"
description = "Runtime-independent wasm32-unknown-unknown test framework"
categories = ["development-tools::testing", "wasm"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/webassembly-test"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"

exclude = [".github/", "bors.toml", "rustfmt.toml"]

[workspace]
members = ["webassembly-test-runner","xtask"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
